--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My First Bitstarter</title>
+		<title>Best Price - Best Product</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -123,34 +123,34 @@
     	<div class="container">
       		<div class="row-fluid heading">
         		<div class="span12">
-          			<h1>Product</h1>
+          			<h1>Best Price - Best Product (BP2) App</h1>
         		</div>
       		</div> 
       		<div class="row-fluid subheading">
         		<div class="span12">
-          			<p class="lead">One sentence description.</p>
+          			<p class="lead">Always low prices and best products.</p>
        			</div>
       		</div>
       		<div class="row-fluid pitch">
         		<div class="span5 offset1 video">
-          			<img class="img-polaroid" src="http://placehold.it/480x300">
+          			<img class="img-polaroid" src="http://mrewert.pbworks.com/f/11.05.12.png">
         		</div>
         		<div class="span5 actions">
           			<div class="span8 offset2">
            		 		<div class="statistics">
               					<div class="span4">
                 					<div class="linediv-l">
-                						<h3>1000</h3> <p>backers</p>
+                						<h3>0</h3> <p>backers</p>
                 					</div>
               					</div>
               					<div class="span4">
                 					<div class="linediv-c">
-                  						<h3>$6000</h3> <p>of $10,000</p>
+                  						<h3>$0</h3> <p>of $10,000</p>
                 					</div>
               					</div>
               					<div class="span4">
                 					<div class="linediv-r">
-                						<h3>10</h3> <p>days left</p>
+                						<h3>30</h3> <p>days left</p>
                 					</div>
               					</div>
             				</div>
@@ -173,32 +173,41 @@
 
       		<div class="row-fluid section1">
         		<div class="span5 offset1 asset">
-          			<img class="img-polaroid" src="http://placehold.it/480x300">
+          			<img class="img-polaroid" src="http://www.blogcdn.com/www.engadget.com/media/2009/12/engadget_iphone_app_1.jpg">
         		</div>
         	<div class="span5 copy">
           		<p>
-           			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            			porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            			mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            			fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            			volutpat lorem ut congue malesuada. In facilisis scelerisque
-            			turpis sed lacinia. Donec in orci lectus.
+           			BP2 is an app that lets you know the best product and the best price you need.
           		</p>
+			<p>
+				<p> <b> Why this project? </b> </p>
+				<p> </p>
+				<p> How many of you want to buy the best product at the best price but do not have enough time to visit several stores and shopping centers. Or just do not want to devote so much effort to make a purchase.</p>
+			</p>
         	</div>
 	</div>
 	<div class="row-fluid section2">
         	<div class="span5 offset1 copy copy-right">
          		<p>
-            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            			porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            			mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            			fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            			volutpat lorem ut congue malesuada. In facilisis scelerisque
-            			turpis sed lacinia. Donec in orci lectus.
+            			<p> <b> What is the purpose of Best price - best product?  </b> </p>
+				<p> </p>
+				<p> 2BP is an app that lets you find the best product at the best price and tells you where you can buy it, based on your tastes and preferences. Products are registered by users or buyers to the system, like the price and description. In order to encourage users to register information about the products, BP2 offers discounts to users that enter more data. <p>
+				<p> </p>
+				<p> <b> Pledge $5 or more </b> </p>
+				<p></p>
+				<p>Thank you, every dollar counts, and we appreciate your support. As a special thanks you will get your name on the BP2.com "founding backers" credit page. </p>
+				<p> </p>
+				<p> <b> Pledge $25 or more </b> </p>
+				<p> </p>
+				<p> Get a BP2 T-Shirt. It will guarantee that you are a smart buyer. </p>
+				<p> </p>
+				<p> <b> Pledge $50 or more</b> </p>
+				<p> </p>
+				<p> You can download a full version of the BP2 app and you will be registered in a premium account for one year. </p>
           		</p>
         	</div>
         	<div class="span5 asset">
-          		<img class="img-polaroid" src="http://placehold.it/480x300">
+          		<img class="img-polaroid" src="http://globex-llc.com/images/buyer.jpg">
         	</div>
       	</div>
 
