--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     	<div class="container">
       		<div class="row-fluid heading">
         		<div class="span12">
-          			<h1>Best Price - Best Product (BP2) App</h1>
+          			<h1>Best Price - Best Product (BP2) App Develop Branch</h1>
         		</div>
       		</div> 
       		<div class="row-fluid subheading">
