--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42932413-1', 'bitstarter.net');
+  ga('create', 'UA-42932413-1', 'cdiazleo--bitstarter-mooc.herokuapp.com');
   ga('send', 'pageview');
 
 </script>
