--- a/index.html
+++ b/index.html
@@ -176,11 +176,9 @@
               				<div class="bar bar-success" style="width: 60%;"></div>
               					<div class="bar bar-warning" style="width: 40%;"></div>
             					</div>
+          				<a class="coinbase-button" data-code="246500af4845072067d9a568ca174cd5" href="https://coinbase.com/checkouts/246500af4845072067d9a568ca174cd5">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           				</div>
-          				<div class="span6 offset3 order">
-            					<button class="btn btn-success btn-large">Preorder</button>
-          				</div>
-          			<div class="span8 offset2 social">
+				<div class="span8 offset2 social">
             				<!-- AddThis Button BEGIN -->
 					<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 						<a class="addthis_button_preferred_1"></a>
